--- a/lab2/github/style.css
+++ b/lab2/github/style.css
@@ -173,17 +173,15 @@ li::before {
     z-index: 10;
 }
 
-.enterprise::before {
-    content: "RECOMMENDED";
+.recom{
     position: absolute;
     top: -17px;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 100px;
     background-color: #0969da;
     color: white;
-    padding: 2px 10px;
+    padding: 2px 5px;
     font-size: 10px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: sans-serif;
     font-weight: bold;
 }
 
