--- a/lab2/github/style.css
+++ b/lab2/github/style.css
@@ -1,7 +1,3 @@
-*{
-    box-sizing: border-box;
-}
-
 .body{
     font-family:Arial, Helvetica, sans-serif;
     background-color: #ccc;
@@ -108,11 +104,12 @@ main{
     display: flex;
     flex-direction: row;
     gap: 50px;
-    align-items: stretch;
+    align-items: flex-start;
     justify-content: center;
     padding: 20px;
     width: 100%;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .free, .team, .enterprise {
@@ -125,6 +122,7 @@ main{
     max-width: 300px;
     padding: 5px;
     box-shadow: 0 24px 48px rgba(140, 149, 159, 0.4);
+    box-sizing: border-box;
 }
 
 ul {
@@ -166,10 +164,11 @@ li::before {
 }
 
 .enterprise {
+    display: flex;
+    flex-direction: column;
     border: 5px solid #0969da; 
     border-top: 20px solid #0969da;
     position: relative;
-    transform: scale(1.05);
     z-index: 10;
 }
 
